syntax = "proto2";
option java_package="com.xubao.test.simpleTest.protobufTest.save";
option java_outer_classname = "ForSave";

message ASave{
    optional string ucjaf = 1;
    optional int32 sdkType = 2;
    optional string name = 3;
    optional string maskName = 4;
    optional int32 ccjaAdd = 5;
    optional int32 ccjaBonus = 6;
    optional int32 ccjaSystem = 7;
    optional int32 ccjaUse = 8;
    optional int32 ccjaStatus = 9;
    optional string pcjafNumber = 10;
    optional string pcjafVerifyCode = 11;
    optional string pcjafVerifyNumber = 12;
    optional int64 pcjafVerifyCodeSendTime = 13;
    optional int32 pcjafNumberBindCcjaf = 14;
    optional int32 currency = 15;
    optional string pcjaf = 16;
    optional string os = 17;
    optional string acjaf = 18;
    optional string adId = 19;
    optional string deviceName = 20;
    optional string systemName = 21;
    optional int32 vipExp = 22;
    optional bool showVip = 23;
    optional int32 memory = 24;
    optional int32 level = 25;
    optional int64 exp = 26;
    optional int64 money = 27;
    optional string avatarUrl = 28;
    optional string deviceCode = 29;
    optional int32 status = 30;
    optional int64 lastLoginTime = 31;
    optional int64 lastLogoutTime = 32;
    optional int64 dailyUpdateTime = 33;
    optional int64 lastLevelUpTime = 34;
    optional int64 lastWorldMailReceiveTime = 35;
    optional int32 onlineDayCcjaf = 36;
    optional int32 seriesLoginDay = 37;
    optional int64 onlineDuration = 38;
    optional string playEntranceType = 39;
    optional int32 tournamentType = 40;
    optional int64 tournamentId = 41;
    optional int32 roomServerId = 42;
    optional int64 tournamentEnterTime = 43;
    optional int64 lastMatchEscapeTime = 44;
    optional int64 matchEscapeCoolDownTime = 45;
    optional bool needBiddingCost = 46;
    optional int32 rcjaGameCcjaf = 47;
    optional int32 rcjaGameEscapeCcjaf = 48;
    optional int32 rcjaAsGoodWinCcjaf = 49;
    optional int32 rcjaAsBadWinCcjaf = 50;
    optional int32 rcjaAsGoodLoseCcjaf = 51;
    optional int32 rcjaAsBadLoseCcjaf = 52;
    optional int32 gameWinCcjaf = 53;
    optional int32 surviveWinCcjaf = 54;
    optional int32 lostWinCcjaf = 55;
    optional int32 guardWinCcjaf = 56;
    optional int32 hiddenerWinCcjaf = 57;
    optional int32 suspicionWinCcjaf = 58;
    optional int32 hunterWinCcjaf = 59;
    optional int32 guessLostCcjaf = 60;
    optional int64 islandVersion = 61;
    optional int64 islandId = 62;
    optional int32 gameServerId = 63;
    optional int32 dailyRandomTaskReplaceChances = 64;
    optional int64 dailyRandomTaskReplaceTime = 65;
    optional int32 dailyRandomTaskAcceptChances = 66;
    optional int64 dailyRandomTaskAcceptTime = 67;
    optional int64 teamId = 68;
    optional string roomZone = 69;
    optional int32 usingHeroId = 70;
}